# emush_rag_chatbot_poc

./: CHANGELOG.md  Makefile  README.md  clone-and-install  pyproject.toml  results
emush_rag_chatbot/: chat_api.py  config.py  document_loader.py  llm.py  main.py  prompts.py  rag_chain.py  streamlit_app.py
emush_rag_chatbot/chroma_db/: chroma.sqlite3
emush_rag_chatbot/data/: data.json  mushpedia.json
emush_rag_chatbot/scripts/: evaluate_rag.py  evaluation_results.json  index_documents.py  test_set.csv  test_set_v2.csv
emush_rag_chatbot/src/: chat_api.py  document_loader.py  prompts.py  rag_chain.py  vector_store.py
emush_rag_chatbot/static/: README.md
emush_rag_chatbot/tests/e2e/: test_chat_api_e2e.py
emush_rag_chatbot/tests/unit/: test_rag_chain.py
hooks/: pre-commit
scripts/: evaluate_rag.py  evaluation_results.json  index_documents.py  test_set_v3.csv
tests/: test_main.py
tests/e2e/: test_chat_api_e2e.py
tests/unit/: test_rag_chain.py
