[project]
name = "emush-rag-chatbot"
version = "0.1.0"
description = "A RAG which can answer questions about eMush game."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "AGPL-3.0-or-later"
authors = [
    {name = "Charles-Meldhine Madi Mnemoi", email = "charlesmeldhine.madimnemoi@gmail.com"}
]
dependencies = [
    "fastapi>=0.109.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "tiktoken>=0.5.0",
    "langchain-chroma>=0.1.4",
    "pydantic-settings>=2.6.1",
]

[dependency-groups]
dev = [
    "pytest-watcher>=0.4.3",
    "python-semantic-release>=9.14.0",
]
lint = [
    "mypy>=1.13.0",
    "pytest-mypy>=0.10.3",
    "ruff>=0.7.2",
    "types-tqdm>=4.67.0.20241119",
]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 119

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["emush_rag_chatbot"]
