[project]
name = "emush-rag-chatbot"
version = "0.2.0"
description = "A RAG which can answer questions about eMush game."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "AGPL-3.0-or-later"
authors = [
    {name = "Charles-Meldhine Madi Mnemoi", email = "charlesmeldhine.madimnemoi@gmail.com"}
]
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "langchain>=0.1.13",
    "langchain-chroma>=0.1.2",
    "langchain-core>=0.1.32",
    "langchain-openai>=0.0.8",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.6.1",
    "streamlit>=1.32.2",
]

[dependency-groups]
dev = [
    "fastapi-cli>=0.0.5",
    "pytest-watcher>=0.4.3",
    "python-semantic-release>=9.14.0",
]
lint = [
    "mypy>=1.13.0",
    "pytest-mypy>=0.10.3",
    "ruff>=0.8.0",
    "types-tqdm>=4.67.0.20241119",
]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["I"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["emush_rag_chatbot"]
